# AugSound

./: README.md
aug_sound_zone_controller/: Cargo.toml
aug_sound_zone_controller/src/: main.rs
config/aln/public_spaces/: biophilic_hydroponics_mall.aln.json
config/aln/publicspaces/: biophilic_adaptive_masking.aln  biophilic_auracast_channels.aln  biophilic_circadian_schedule.aln  biophilic_directional_spots.aln  biophilic_zones.aln
config/metrics/creativity_scoring/: integrity_score.metric.json
config/metrics/helpfulness/: helpfulness_weight.metric.json
config/metrics/social_impact/: impact_score.metric.json
config/policies/creator_support/: creator_support.policy.json
configs/personas/: uplifting_coach.lua
dashboards/mgpi/: mgpi_dashboard_aug_sound_phoenix.v1.json
docs/: ai-audio-engine-schemas.md  architecture-overview.md  phoenix-integration-notes.md
examples/http_client/: package.json  tsconfig.json
governance/protocols/: governance_change_protocol.v1.json
infra/jetson/: jetson-battery-smart-city-profile.js
schemas/: civic_quiet_room_soundscape.json  ecowalkway_ambience_profile.json  gymzone_motivation_track_spec.json  retail_affect_guidance_cue.json  transit_pod_ambience_state.json
spec/impactlog/: impactlog_exposure_incident_spec.v1.json
spec/integritytrace/: integritytrace_music_annotation_schema.v1.json
spec/ko_couplings/: ko_coupling_ent_knowledge.v1.json
spec/routing/: context_routing_weights_aug_sound.v1.json
spec/scoring/: integrity_impact_thresholds.v1.json  time_decay_config.v1.json  usefulness_enjoyment_score.v1.json
(+10 files in other folders)
