[package]
name = "aug_sound_zone_controller"
version = "0.1.0"
edition = "2021"
authors = ["AugSound Contributors"]
license = "MIT"
description = "HTTP zone controller for AugSound GymZone motivation specs."
readme = "../README.md"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
